# target-mssql

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  dummy_to_be_deeted.txt  meltano.yml  pymssql-2.2.10-cp311-cp311-macosx_10_9_universal2.whl  pyproject.toml  sample_stream.jsonl  test_run.sh  tox.ini  unkeyed_stream.jsonl
.github/workflows/: ci.yaml  release.yaml
target_mssql/: connector.py  sinks.py  target.py
target_mssql/tests/: __init__.py  test_core.py
target_mssql/tests/data_files/: camelcase.singer  column_comments.singer  composite_key_part1.singer  composite_key_part2.singer  disappearing_columns.singer  insert_merge_part1.singer  insert_merge_part2.singer  invalid_data_type.singer  long_string.singer  null_key.singer  schema_no_properties.singer  schema_updates.singer  simple_continents.singer  simple_countries.singer  simple_stream.singer  special_chars_in_attributes.singer  target_schema.singer
target_mssql/tests/samples/aapl/: __init__.py  __main__.py
target_mssql/tests/samples/sample_tap_countries/: countries_streams.py  countries_tap.py
target_mssql/tests/samples/sample_tap_countries/schemas/: continents.json
